--- a/src/Navbar/Navbar.module.css
+++ b/src/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
   top: 0;
   display: flex;
   flex-flow: row wrap;
-  padding: 20px 0 60px 0;
+  padding: 20px 0;
   z-index: 3;
   backdrop-filter: blur(10px);
 }
